[package]
name = "traktor-pio-link"
version = "0.1.0"
description = "Traktor-Pio-Link"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bpm_sysex_bridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
midir = "0.9"
tower-http = { version = "0.5", features = ["cors"] }
once_cell = "1.19"
hex = "0.4"
rfd = "0.15"

